3.msa/k8s/kafka_depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-depl
  namespace: brad-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.7.0
        ports:
        - containerPort: 9092
        - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: brad-ns
spec:
  type: ClusterIP
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  - name: controller
    port: 9093
    targetPort: 9093
  selector:
    app: kafka
