3.msa/k8s/redis_depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: brad-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-redis
  template:
    metadata:
      labels:
        app: my-redis
    spec:
      containers:
        - name: my-redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: brad-ns
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: my-redis
